# bpp

./: .dockerignore  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.debian  GUIDE.md  Makefile  Modelfile  README.md  README_COMMAND_OPTIMIZATION.md  STYLE_GUIDE.md  command.h  command_handler.h  config_loader.h  discord-bot.service  docker-compose.yml  embed_style.h  events_forward_decls.txt  feature_gate.h  log.h  main.cpp  media_manager.h  scratch_all_docs.txt  server_logger.cpp  server_logger.h  tui_logger.cpp  tui_logger.h
.github/workflows/: discord-webhook.yml
build_local/: compile_commands.json
commands/: achievements.h  crafting.h  daily_challenges.h  economy.h  economy_core.h  economy_examples.h  endgame.h  fishing.h  fun.h  gambling.h  games.h  global_boss.cpp  global_boss.h  global_boss_raid.h  guide.h  guide_data.cpp  guide_data.h  help_data.h  help_new.h  leaderboard.h  leaderboard_backup.h  leveling.h  market_state.h  mastery.h  milestones.h  mining.h  moderation.h  moderation.h.backup  moderation_commands.h  moderation_new.h.backup  owner.cpp  owner.h  passive.h  patch.h  pet_system.h  server_economy.h  setup.cpp  setup.h  skill_trees.h  social.h  (+7 more)
commands/crafting/: craft.h  crafting_helpers.h
commands/daily_challenges/: challenges.h  daily_stat_tracker.h  streaks.h
commands/economy/: achievements_cmd.h  balance.h  bank.h  bank_old.h  bazaar.h  helpers.h  lootbox_catalog.h  market.h  money.h  money_parent.h  pay.h  prestige.h  rebirth.h  rob.h  shop.cpp  shop.h  support_server.h  trading.h  use.h  withdraw.h
commands/fishing/: autofish_runner.h  autofisher.h  crews.h  finfo.h  fish.cpp  fish.h  fish_parent.h  fishdex.h  fishing_helpers.h  inventory.h  sell.h  simple_commands.h  suggest_fish.h
commands/gambling/: blackjack.cpp  blackjack.h  coinflip.h  crash.h  dice.h  frogger.h  gamble_parent.h  gambling_audit.h  gambling_helpers.h  gambling_interactions.h  jackpot.h  lottery.h  minesweeper.h  poker.cpp  poker.h  roulette.h  russian_roulette.h  slots.h  stats.h
commands/games/: blacktea.h  heist.h  react.h  tictactoe.h  whitetea.h
commands/leaderboard/: leaderboard_cmd.h  leaderboard_helpers.h  leaderboard_interactions.h
commands/leveling/: xp_handler.h  xpblacklist.h
commands/mastery/: mastery.h  mastery_helpers.h
commands/mining/: automine_runner.h  inventory.h  mine.h  mining_helpers.h
commands/moderation/: ban.h  case_cmd.h  duration_edit.h  history_cmd.h  infraction_engine.h  infractions_config.h  jail.h  jailsetup.h  kick.h  lockdown.h  logconfig.h  massban.h  masskick.h  massmute.h  masstimeout.h  mod_parent.h  moderation_interactions.cpp  modlog_channel.h  modmail.cpp  modmail.h  modstats.h  mute.h  muterole.h  note.h  pardon.h  purge.h  quiet_config.h  raid_protection.h  reason.h  slowmode.h  softban.h  timeout.h  unban.h  unjail.h  unmute.h  untimeout.h  warn.h
commands/owner/: audit.cpp  audit.h  feature_command.h  gambling_audit.h  log_beta.h  owner_utils.cpp  owner_utils.h  telemetry.cpp  telemetry.h
commands/passive/: bank_interest.h  commodity_market.h  fish_pond.h  mining_claims.h  passive_parent.h
commands/pets/: pets.cpp  pets.h
commands/quiet_moderation/: account_guard.h  antispam.h  antispam_api.h  antispam_command.cpp  antispam_config.h  antispam_handler.cpp  automod_commands.h  avatar_guard.h  mod_log.h  mutual_guard.h  nickname_guard.h  reaction_filter.h  text_filter.h  text_filter_command.cpp  text_filter_config.h  text_filter_handler.cpp  url_guard.h
commands/skill_tree/: skill_tree.h
commands/social/: heist.h
commands/utility/: autopurge.h  autorole.h  bugreport.h  cleanup.h  giveaways.h  interaction_roles.h  media.cpp  media.h  media_edit.h  ping.h  poll.h  prefix.h  privacy.h  reactionrole.cpp  reactionrole.h  role.h  serverconfig.h  serverinfo.h  serverinfo.h.old  settings.h  simple_commands.h  snipe.h  status.h  steal.h  suggestion.h  tickets.h  userinfo.h  utility_helpers.h
database/: QUICK_REFERENCE.md  README.md  schema.sql  schema_v2.sql  setup.sh
database/core/: connection_pool.cpp  connection_pool.h  database.cpp  database.h  migrations.cpp  migrations.h  types.h
database/migrations/: 001_server_economy.sql  002_autofisher_v2.sql  003_prestige.sql  004_market_and_permissions.sql  005_disable_leveling_by_default.sql  006_add_exclusive_column.sql  007_add_passive_mode.sql  008_create_loans_table.sql  009_jackpot_and_world_events.sql  010_mining_full.sql  011_guild_stats.sql  012_voice_boost_stats.sql  013_privacy_and_optout.sql  (+8 more)
docs/: COMMANDS_REFERENCE.md  DISCORD_INTENT_APPLICATION.md  ECONOMY_IDEAS.md  IMPLEMENTATION_SUMMARY.md  INTENT_QUICK_ANSWERS.md  INTENT_TECHNICAL_REFERENCE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICKSTART_ServerEconomy.md  README_Leaderboards.md  README_ServerEconomy.md  SOLUTION_SUMMARY.md
events/: event_handlers.cpp  event_handlers.h  modmail_handler.cpp  modmail_handler.h
fish_emojis/: download_emojis.sh
lean/: BPP.lean  README.md  lake-manifest.json  lakefile.lean
logs/: log.txt  loginfo.md
performance/: api_cache_client.h  async_stat_writer.h  cache_manager.cpp  cache_manager.h  cached_database.h  chart_renderer.h  hybrid_database.h  invite_cache.h  local_db.cpp  local_db.h  message_cache.h  optimized_command_handler.h  snipe_cache.h  write_batch_queue.h  xp_batch_writer.h
scripts/: doc_gen.py  generate_patch_notes.py  live_flamegraph.sh  migrate_to_aiven.sh  migrate_to_optimized.sh  run_discord_bot.sh  setup_perf.sh  setup_vps.sh
security/: input_validation.h  safe_db.h  secure_config.h  thread_safe_map.h
sql/: add_prestige_variants.sql  apply_new_tables.sql  crafting_mastery_migration.sql  enhanced_data.sql  feature_flags_migration.sql  initial_patch.sql  leveling_migration_fix.sql  logging_setup_migration.sql  mining_shop_items.sql  passive_income_and_social.sql  populate_dashboard_data.sql  prestige_items.sql  simple_data.sql  simple_extra_data.sql  xp_blacklist_schema.sql
tools/: fish_balance  fish_balance.cpp  fish_balance_test  minesweeper_sim.py
utils/: colors.h  file_guards.h  logger.h  string_utils.h
(+101 files in other folders)
